# ESP32MCU_jigaku

./: .gitignore  .gitmodules  README.md
Esp32-s2mini_blink/: sdkconfig.old
Esp32-s2mini_blink/main/: main.c
Esp32_c3mini1_project/INMP441_test/: CMakeLists.txt  sdkconfig  sdkconfig.old
Esp32_c3mini1_project/INMP441_test/main/: CMakeLists.txt  i2s_test.c
Esp32_c3mini1_project/INMP441_test/python/: fastFourier_Trans.py
Esp32_c3mini1_project/MPU6050_test/: CMakeLists.txt  sdkconfig  sdkconfig.old
Esp32_c3mini1_project/MPU6050_test/main/: CMakeLists.txt  main.c
Esp32_c3mini1_project/RGB_blinkLED/: CMakeLists.txt  sdkconfig  sdkconfig.old
Esp32_c3mini1_project/RGB_blinkLED/main/: CMakeLists.txt  main.c
Esp32_c3mini1_project/SSD1306_test/: CMakeLists.txt  sdkconfig
Esp32_c3mini1_project/VL53L0X_test/: sdkconfig  sdkconfig.old
Esp32_c3mini1_project/ad8232_test/: CMakeLists.txt  sdkconfig  sdkconfig.old
Esp32_c3mini1_project/lcd_display/: CMakeLists.txt  sdkconfig
Esp32_c3mini1_project/max30102_test/: CMakeLists.txt
Esp32_c3mini1_project/vl53l0x_laser_c3/: CMakeLists.txt
Esp32_h2mini_project/RGB_blink/: README.md
Esp32_origin_project/ssd1306_oled_test/: CMakeLists.txt
Esp32_origin_project/vl53l0x_test/: CMakeLists.txt  sdkconfig  sdkconfig.old
Esp32_s2mini_project/blink_LED/: CmakeLists.txt
I2c_scan/: CMakeLists.txt
I2c_scan/main/: main.c
i2c_scan/: CMakeLists.txt
i2c_scan/main/: CMakeLists.txt  i2c_scan.c
ssd1306_oled_test/: CMakeLists.txt  sdkconfig
ssd1306_oled_test/main/: CMakeLists.txt  main.c
(+53 files in other folders)
